# HiperRefactor

./: .gitignore  CMakeLists.txt  README.md  userConfig.cmake
EmptyApp/: AuxEmptyApp.h  Block_Map.h  CMakeLists.txt  EmptyApp.cpp  GenericFieldStruct.h  Ghost_IE.h
EmptyApp/GenericField/: Block_Map.cpp  Block_Map.h  GenericFieldStruct-impl.h  GenericFieldStruct.h  GhostManager.cpp  GhostManager.h  Ghost_IE-impl.h  Ghost_IE.h
EmptyApp/tests/: test_Fields.cpp  test_Ghosts.cpp  test_hlComparison.cpp
HiperlifePrototype/: CMakeLists.txt
HiperlifePrototype/GenericField/: Block_Map.cpp  DofManager.cpp  DofManager.h  GenericFieldStruct-impl.h  GenericFieldStruct.h  Ghost_IE-impl.h  Ghost_IE.h
HiperlifePrototype/tests/: test_DofManager.cpp  test_Mesh.cpp  test_hlComparison.cpp
